--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,7 @@ div {
 .logo-leouve {
     width: 160px;
     height: 51px; 
+    margin-left: 49px;
 }
 
 body {
@@ -308,6 +309,7 @@ footer #footer-texts {
 .container {
     /* width: 100%; */
     min-width: 1320px;
+    /* max-width: 1320px; */
     padding-right: 0px;
     padding-left: 0px;
     margin-right: auto;
@@ -315,18 +317,19 @@ footer #footer-texts {
 }
 
 .row {
-    display: -ms-flexbox;
+    /* display: -ms-flexbox; */
     display: flex;
-    -ms-flex-wrap: wrap;
-    flex-wrap: wrap;
-    margin-right: -15px;
-    margin-left: -15px;
+    /* -ms-flex-wrap: wrap;
+    flex-wrap: wrap; */
+    /* margin-right: -15px; */
+    /* margin-left: -15px; */
 }
 /* Flexbox para a row, garantindo que os itens se alinhem e distribuam corretamente */
 .row {
     display: flex;
-    flex-wrap: nowrap; /* Evita que os itens se movam para baixo */
-    justify-content: space-between; /* Espaça uniformemente os itens */
+    /* flex-wrap: nowrap; Evita que os itens se movam para baixo */
+    /* justify-content: space-between;  */
+    /* Espaça uniformemente os itens */
     align-items: center; /* Alinha verticalmente os itens */
     overflow-x: auto; /* Adiciona rolagem horizontal se necessário */
 }
@@ -379,6 +382,16 @@ footer #footer-texts {
     max-width: 30px; /* Ajusta o tamanho do ícone do botão */
 }
 
+#nav #search img {
+    margin-right: 55px;
+    width: 40px;
+    height: auto;
+}
+
+#nav #menu img {
+    margin-left: 15px;
+}
+
 /* Estilo para os aplicativos */
 #apps {
     display: flex;
@@ -408,6 +421,7 @@ footer #footer-texts {
         .row.no-gutters {
             margin-right: 0;
             margin-left: 0;
+            align-items: flex-start;
         }
 
         .col-md-4 {
@@ -553,3 +567,85 @@ img {
     }
 }
 
+
+/* =========== NOTÍCIA DO DIA ===========*/
+.border-left {
+    border-left: 1px solid #dedede;
+}
+
+#news-day .title-section {
+    font-size: 17px;
+    font-weight: 700;
+    color: #000;
+    text-decoration: none;
+}
+
+#news-day .title-section::after {
+    content: "";
+    display: block;
+    width: 100%;
+    height: 2px;
+    border-radius: 5px;
+    background-color: #000;
+    opacity: .5;
+}
+
+#news-day .news {
+    position: relative;
+    padding: 13px 19px;
+    border-radius: 5px;
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    width: 100%;
+    min-height: 262px;
+    display: flex;
+    align-items: flex-end;
+}
+
+#news-day .news .layer {
+    background-color: rgba(0, 0, 0, .4);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 5px;
+}
+
+#news-day .news .content {
+    z-index: 999;
+}
+
+#news-day .news .content .tag, #news-day .news .content .category {
+    text-decoration: none;
+    background-color: #4278bf;
+    color: #fff;
+    font-size: 11px;
+    font-weight: 700;
+    padding: 3px 8px;
+    border-radius: 5px;
+    display: inline-block;
+    margin-right: 25px;
+    text-transform: uppercase;
+    position: absolute;
+    top: 15px;
+    left: 15px;
+}
+
+#news-day .news .content .title {
+    color: #fff;
+    font-size: 18px;
+    font-weight: 700;
+}
+
+#news-day .news .content .title a {
+    color: #fff;
+    font-size: 18px;
+    font-weight: 700;
+    text-decoration: none;
+}
+
+/* =========== PUBLIEDITORIAL ===========*/
+
+/* =========== LEOUVE TV ===========*/
