--- a/css/style.css
+++ b/css/style.css
@@ -647,5 +647,75 @@ img {
 }
 
 /* =========== PUBLIEDITORIAL ===========*/
+#publieditorial .title-section {
+    font-size: 17px;
+    font-weight: 700;
+    color: #000;
+}
+
+#publieditorial .title-section::after {
+    content: "";
+    display: block;
+    width: 100%;
+    height: 2px;
+    border-radius: 5px;
+    background-color: #000;
+    opacity: .5;
+}
+
+#publieditorial .news {
+    position: relative;
+    padding: 13px 19px;
+    border-radius: 5px;
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    min-height: 262px;
+    display: flex;
+    align-items: flex-end;
+}
+
+#publieditorial .news .layer {
+    background-color: rgba(0, 0, 0, .4);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 5px;
+}
+
+#publieditorial .news .content {
+    z-index: 999;
+}
+
+#publieditorial .news .content .tag, #publieditorial .news .content .category {
+    text-decoration: none;
+    background-color: #4278bf;
+    color: #fff;
+    font-size: 11px;
+    font-weight: 700;
+    padding: 3px 8px;
+    border-radius: 5px;
+    display: inline-block;
+    margin-right: 25px;
+    text-transform: uppercase;
+    position: absolute;
+    top: 15px;
+    left: 15px;
+}
+
+#publieditorial .news .content .title {
+    color: #fff;
+    font-size: 18px;
+    font-weight: 700;
+}
+
+#publieditorial .news .content .title a {
+    color: #fff;
+    font-size: 18px;
+    font-weight: 700;
+    text-decoration: none;
+}
 
 /* =========== LEOUVE TV ===========*/
