--- a/css/style.css
+++ b/css/style.css
@@ -719,3 +719,50 @@ img {
 }
 
 /* =========== LEOUVE TV ===========*/
+#leouve-tv .title-section {
+    font-size: 17px;
+    font-weight: 700;
+    color: #4278bf;
+}
+
+#leouve-tv .title-section::after {
+    content: "";
+    display: block;
+    width: 100%;
+    height: 2px;
+    border-radius: 5px;
+    background-color: #4278bf;
+    opacity: .5;
+}
+
+#leouve-tv .video {
+    position: relative;
+    border-radius: 5px;
+    height: 262px;
+    background-position: center;
+}
+
+#leouve-tv .video .video-container {
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
+
+#leouve-tv .video .content {
+    cursor: pointer;
+    padding: 13px 19px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 80%;
+    height: 100%;
+}
+
+#leouve-tv .video .content .title {
+    color: #fff;
+    font-size: 18px;
+    font-weight: 700;
+    text-decoration: none;
+    position: absolute;
+    bottom: 50px;
+}
