--- a/css/style.css
+++ b/css/style.css
@@ -328,6 +328,9 @@ footer #footer-texts {
 .row {
     display: flex;
     /* flex-wrap: nowrap; Evita que os itens se movam para baixo */
+    flex-wrap: wrap; /* Permite que os itens se movam para baixo */
+    margin-right: -15px; /* comentar? */
+    margin-left: -15px;
     /* justify-content: space-between;  */
     /* Espaça uniformemente os itens */
     align-items: center; /* Alinha verticalmente os itens */
@@ -941,14 +944,92 @@ img {
     overflow: hidden;
 }
 
+#single .thumbnail-caption {
+    text-align: center;
+    font-size: 12px;
+    color: #4d4c4c;
+}
 
+#single article {
+    font-size: 18px;
+    font-weight: 500;
+    color: #333;
+    line-height: 1.6;
+    --ws-font-size-title: 20px;
+    --ws-font-size-circle-title: 14px;
+    --ws-font-size-excerpt: 16px;
+    --ws-font-size-author-date: 14px;
+    --ws-aspect-ratio: 4/6;
+    --ws-list-aspect-ratio: 4/6;
+    --ws-overlay-text-color: #fff;
+    --ws-overlay-text-lh: 1.6;
+    --ws-story-min-width: 230px;
+    --ws-story-max-width: 100%;
+    --ws-circle-size: 96px;
+    --ws-circle-border-color: #ccc;
+}
 
+#single article p, #single article .label {
+    margin-bottom: 30px;
+}
 
+.mb-5, .my-5 {
+    margin-bottom: 3rem !important;
+}
 
+#more-related .title-section, #more-author .title-section {
+    font-size: 24px;
+    font-weight: bold;
+    color: #333;
+}
 
+.swiper-pointer-events {
+    touch-action: pan-y;
+    }
 
+    .swiper-wrapper {
+        position: relative;
+        width: 100%;
+        height: 100%;
+        z-index: 1;
+        display: flex;
+        transition-property: transform;
+        box-sizing: content-box;
+        }
 
+        .swiper-button-next, .swiper-rtl .swiper-button-prev {
+            right: 10px;
+            left: auto;
+            }
 
+            .swiper-button-next, .swiper-button-prev {
+                position: absolute;
+                top: 50%;
+                width: calc(var(--swiper-navigation-size)/44*27);
+                height: var(--swiper-navigation-size);
+                margin-top: calc(0px - var(--swiper-navigation-size)/2);
+                z-index: 10;
+                cursor: pointer;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                color: var(--swiper-navigation-color, var(--swiper-theme-color));
+                }
+
+                .swiper-button-next.swiper-button-disabled, .swiper-button-prev.swiper-button-disabled {
+                    opacity: .35;
+                    cursor: auto;
+                    pointer-events: none;
+                    }
+
+                    .swiper .swiper-notification {
+                        position: absolute;
+                        left: 0;
+                        top: 0;
+                        pointer-events: none;
+                        opacity: 0;
+                        z-index: -1000;
+                        }
 
 
 
