--- a/css/style.css
+++ b/css/style.css
@@ -987,50 +987,103 @@ img {
     touch-action: pan-y;
     }
 
-    .swiper-wrapper {
-        position: relative;
-        width: 100%;
-        height: 100%;
-        z-index: 1;
-        display: flex;
-        transition-property: transform;
-        box-sizing: content-box;
-        }
+.swiper {
+    margin-left: auto;
+    margin-right: auto;
+    position: relative;
+    overflow: hidden;
+    list-style: none;
+    padding: 0;
+    z-index: 1;
+    }
 
-        .swiper-button-next, .swiper-rtl .swiper-button-prev {
-            right: 10px;
-            left: auto;
-            }
+.swiper-wrapper {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    display: flex;
+    transition-property: transform;
+    box-sizing: content-box;
+    }
 
-            .swiper-button-next, .swiper-button-prev {
-                position: absolute;
-                top: 50%;
-                width: calc(var(--swiper-navigation-size)/44*27);
-                height: var(--swiper-navigation-size);
-                margin-top: calc(0px - var(--swiper-navigation-size)/2);
-                z-index: 10;
-                cursor: pointer;
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                color: var(--swiper-navigation-color, var(--swiper-theme-color));
-                }
+.swiper-backface-hidden .swiper-slide {
+    transform: translateZ(0);
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+    }
 
-                .swiper-button-next.swiper-button-disabled, .swiper-button-prev.swiper-button-disabled {
-                    opacity: .35;
-                    cursor: auto;
-                    pointer-events: none;
-                    }
+.swiper-button-next, .swiper-rtl .swiper-button-prev {
+    right: 10px;
+    left: auto;
+    }
 
-                    .swiper .swiper-notification {
-                        position: absolute;
-                        left: 0;
-                        top: 0;
-                        pointer-events: none;
-                        opacity: 0;
-                        z-index: -1000;
-                        }
+.swiper-button-next, .swiper-button-prev {
+    position: absolute;
+    top: 50%;
+    width: calc(var(--swiper-navigation-size)/44*27);
+    height: var(--swiper-navigation-size);
+    margin-top: calc(0px - var(--swiper-navigation-size)/2);
+    z-index: 10;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: var(--swiper-navigation-color, var(--swiper-theme-color));
+    }
 
+.swiper-button-next.swiper-button-disabled, .swiper-button-prev.swiper-button-disabled {
+    opacity: .35;
+    cursor: auto;
+    pointer-events: none;
+    }
+
+.swiper .swiper-notification {
+    position: absolute;
+    left: 0;
+    top: 0;
+    pointer-events: none;
+    opacity: 0;
+    z-index: -1000;
+    }
+
+#more-related .news .thumbnail, #more-author .news .thumbnail {
+    position: relative;
+    width: 100%;
+    min-height: 130px;
+    background-color: #4278bf;
+    border-radius: 5px;
+    }
+
+#more-related .news .thumbnail img, #more-author .news .thumbnail img {
+    border-radius: inherit;
+    }
+
+#more-related .news .thumbnail .cartola:last-child, #more-author .news .thumbnail .cartola:last-child {
+    margin-right: 0;
+    }
+
+#more-related .news .thumbnail .cartola, #more-author .news .thumbnail .cartola {
+    background-color: #c3d053;
+    color: #fff;
+    font-size: 11px;
+    font-weight: 700;
+    padding: 3px 8px;
+    border-radius: 5px;
+    display: inline-block;
+    margin-right: 25px;
+    text-transform: uppercase;
+    position: absolute;
+    bottom: 13px;
+    right: 13px;
+    z-index: 999;
+    }
+
+#more-related .news .title, #more-author .news .title {
+    font-size: 16px;
+    font-weight: 700;
+    color: #4d4c4c;
+    }
 
 
 
